@@ -22,6 +22,8 @@ Bug Fixes:
     message to be escaped (Issue 219).
  -- @verb/no_name used unterminated verb_sw table (Issued 243).
  -- Guest objects left DARK through announcement code (Issue 244).
+ -- @wall evaluated a speechmod before processing the message (Issue 16).
+ -- @wall's switches did not interact properly (Issue 30).
 
 
 Performance Enhancements:
